--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
   crossorigin="anonymous"
 />
 
-    <title>React App</title>
+    <title>Tour Travel Tourism Agency
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
